--- a/styles/bio.css
+++ b/styles/bio.css
@@ -1,12 +1,12 @@
     
-@media (min-width: 1440px) {
+@media (min-width: 1800px) {
 
 
     .text-box {
         position: absolute;
         max-width: 33%;
         left: 11%;
-        top: 17.5%;
+        top: 18%;
         bottom: auto;
         justify-content: center;
         text-align: right;
@@ -20,6 +20,7 @@
 
     .text-box h2 {
         font-size: 40px;
+        margin-top: 0%;
       }
 
     .text-box p {
@@ -29,12 +30,10 @@
 
     .image-box{
         position: absolute;
-        top: 17.5%;
-        bottom: 22.5%;
+        top: 20%;
+        bottom: auto;
         right: 15%;
         width: 25%;
-        height: auto;
-        background-color: white;
     }
       
 
@@ -51,15 +50,13 @@
 }
 
 
-    @media (max-width: 1440px) {
+@media (min-width: 981px) and (max-width: 1800px) {
         .text-box {
+            position: absolute;
             color: var(--color-dark-background);
-            max-width: 100%;
-            max-height: 75%;
-            margin-right: 5vh;
-            margin-left: 5vh;
-            margin-bottom: 10vh;
-            margin-top: 0vh;
+            top: 25%;
+            margin-left: 17.5%;
+            margin-right: 17.5%;
             background-color: var(--color-light-background);
             box-sizing: border-box; /* Include the border in the box's total width and height */
             line-height: 2; /* Increase the line height to 1.5 times the font size */
@@ -70,14 +67,37 @@
         .image-box img {
             display: None;
         }
+
+        .text-box h2 {
+            font-size: 40px;
+            margin-top: 0%;
+          }
+    
+        .text-box p {
+            text-align: justify;
+            font-size: 22px;
+        }
     }
 
-    @media (max-width: 980px) {
+@media (max-width: 980px) {
+
+    .text-box {
+        color: var(--color-dark-background);
+        top: 25%;
+        margin-left: 17.5%;
+        margin-right: 17.5%;
+        background-color: var(--color-light-background);
+        box-sizing: border-box; /* Include the border in the box's total width and height */
+        line-height: 2; /* Increase the line height to 1.5 times the font size */
+        /* border: 3px solid transparent var(--color-light-background); /* Set transparent border */
+        /* box-shadow: 0 0 20px 3px var(--color-dark-background);
+        border-radius: 10px; /* Add border-radius property with desired value */
+    }
         .text-box h2{
             font-size: 40px;
         }
         .text-box p{
-            font-size: 24px;
+            font-size: 40px;
         }
         .image-box img {
             display: None;
